# sangaiWeather

./: .env  README.md  main.py  pyproject.toml
MODEL/: manipur_hazards_final_FIXED.csv  weatherfinalfinal.py
MODEL/saved_models/: coldwave_rule.joblib  earthquake_kmeans.joblib  flood_model.joblib  hailstorm_rule.joblib  heatwave_rule.joblib  rainfall_model.joblib
SERVER/: main.py
SEVER/: main.py
